@@ -6,6 +6,5 @@ import java.io.IOException;
 
 public interface Router {
     void dispatchToBlock(HttpServletResponse servletResponse, String requestPath) throws IOException;
-
     boolean canHandleRequest(String requestPath);
 }
