@@ -2,6 +2,7 @@
 
 Block access to outcontext Method Arguments now working.
 Need to clean up method arguments to use an array everywhere.
+Added call to router in Stout. Next dispatch to block.
 
 18/11/2011 Changes
 
